refactor(api): ♻️ 重构集群服务角色组配置模块
重构集群服务角色组配置相关代码，主要变更包括：
1. 在Mapper层增加查询方法，支持按角色组ID、版本号等多种条件查询配置
2. 引入DTO/VO转换器，实现Service层与Controller层的数据隔离
3. 优化Controller层接口，统一使用DTO/VO进行数据交互
4. 完善Service层方法注释和业务逻辑

这些改动提高了代码的可维护性和扩展性，同时为后续功能开发奠定基础。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>