@@ -17,30 +17,42 @@
 
 package com.datasophon.api.controller.v1.cluster;
 
+import com.datasophon.api.converter.ClusterServiceRoleGroupConfigConverter;
 import com.datasophon.api.service.ClusterServiceRoleGroupConfigService;
+import com.datasophon.common.dto.ClusterServiceRoleGroupConfigDTO;
+import com.datasophon.common.vo.ClusterServiceRoleGroupConfigVO;
 import com.datasophon.common.vo.Result;
-import com.datasophon.dao.entity.ClusterServiceRoleGroupConfig;
 import org.springframework.beans.factory.annotation.Autowired;
 import com.datasophon.api.annotation.ApiVersion;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import java.util.Arrays;
+import java.util.List;
 
+/**
+ * 集群服务角色组配置控制器
+ * 提供集群服务角色组配置的REST API接口
+ *
+ * @author 任相鹏
+ * @email 635887935@qq.com
+ * @date 2025-08-04
+ */
 @ApiVersion(path = "cluster/service/role/group/config")
 public class ClusterServiceRoleGroupConfigController {
 
     @Autowired
     private ClusterServiceRoleGroupConfigService clusterServiceRoleGroupConfigService;
 
+    @Autowired
+    private ClusterServiceRoleGroupConfigConverter clusterServiceRoleGroupConfigConverter;
 
     /**
      * 列表
      */
     @RequestMapping("/list")
-    public Result list() {
-
+    public Result<List<ClusterServiceRoleGroupConfigVO>> list() {
+        // 这里需要根据实际业务需求实现列表查询逻辑
         return Result.success();
     }
 
@@ -48,41 +60,40 @@ public class ClusterServiceRoleGroupConfigController {
      * 信息
      */
     @RequestMapping("/info/{id}")
-    public Result info(@PathVariable("id") Integer id) {
-        ClusterServiceRoleGroupConfig clusterServiceRoleGroupConfig = clusterServiceRoleGroupConfigService.getById(id);
-
-        return Result.success().put("clusterServiceRoleGroupConfig", clusterServiceRoleGroupConfig);
+    public Result<ClusterServiceRoleGroupConfigVO> info(@PathVariable("id") Integer id) {
+        // 调用Service层方法，获取DTO
+        ClusterServiceRoleGroupConfigDTO dto = clusterServiceRoleGroupConfigService.getByIdAsDto(id);
+        // Controller层：DTO → VO转换
+        ClusterServiceRoleGroupConfigVO vo = clusterServiceRoleGroupConfigConverter.dtoToVo(dto);
+        return Result.success(vo);
     }
 
     /**
      * 保存
      */
     @RequestMapping("/save")
-    public Result save(@RequestBody ClusterServiceRoleGroupConfig clusterServiceRoleGroupConfig) {
-        clusterServiceRoleGroupConfigService.save(clusterServiceRoleGroupConfig);
-
-        return Result.success();
+    public Result<String> save(@RequestBody ClusterServiceRoleGroupConfigDTO dto) {
+        // Controller层直接传递DTO给Service层
+        clusterServiceRoleGroupConfigService.saveConfig(dto);
+        return Result.success("保存成功");
     }
 
     /**
      * 修改
      */
     @RequestMapping("/update")
-    public Result update(@RequestBody ClusterServiceRoleGroupConfig clusterServiceRoleGroupConfig) {
-
-        clusterServiceRoleGroupConfigService.updateById(clusterServiceRoleGroupConfig);
-
-        return Result.success();
+    public Result<String> update(@RequestBody ClusterServiceRoleGroupConfigDTO dto) {
+        // Controller层直接传递DTO给Service层
+        clusterServiceRoleGroupConfigService.updateConfig(dto);
+        return Result.success("更新成功");
     }
 
     /**
      * 删除
      */
     @RequestMapping("/delete")
-    public Result delete(@RequestBody Integer[] ids) {
-        clusterServiceRoleGroupConfigService.removeByIds(Arrays.asList(ids));
-
-        return Result.success();
+    public Result<String> delete(@RequestBody Integer[] ids) {
+        clusterServiceRoleGroupConfigService.removeByIds(List.of(ids));
+        return Result.success("删除成功");
     }
-
 }
